--- a/src/realmadrid.html
+++ b/src/realmadrid.html
@@ -47,7 +47,7 @@
         </section>
         <section>
             <h1>Volver</h1>
-            <a href="p2.html">Página de Inicio</a>
+            <a href="index.html">Página de Inicio</a>
         </section>
     </main>
     <footer>
