--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
       <section id="form">
         <h1>Formulario de Admisión</h1>
         <h3>¡Únete a nuestro grupo y no te pierdas ni una noticia de nuestro ídolo!</h3>
-          <form action="/submit_formulario" method="POST">
+          <form method="POST">
             <fieldset>
               <legend>Datos de Contacto</legend> 
               <label for="nombre">Nombre:</label><br>
