--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
       <section id="form">
         <h1>Formulario de Admisión</h1>
         <h3>¡Únete a nuestro grupo y no te pierdas ni una noticia de nuestro ídolo!</h3>
-          <form method="POST">
+          <form>
             <fieldset>
               <legend>Datos de Contacto</legend> 
               <label for="nombre">Nombre:</label><br>
@@ -116,7 +116,7 @@
               <input type="email" id="email" name="email" required><br>
 
               <label for="telefono">Número de Teléfono:</label><br>
-              <input type="telefono" id="telefono" name="telefono" required><br>
+              <input type="text" id="telefono" name="telefono" required><br>
             </fieldset>
             <fieldset>
               <legend>Preguntas de admisión</legend> 
